--- a/src/PG1-Zhuye/pg1-1_zhuye.html
+++ b/src/PG1-Zhuye/pg1-1_zhuye.html
@@ -188,7 +188,7 @@
 
 	var homeworkjson;
 	var hwcharacter = "homework1"
-	var homeworkjsonsrc = "../../../database/homework.json";
+	var homeworkjsonsrc = "../../database/homework.json";
 	function readhomeworkjsonfile() {
 		var request = new XMLHttpRequest();
 		request.open("get", homeworkjsonsrc);
