--- a/src/PG1-Zhuye/pg1-1_zhuye.html
+++ b/src/PG1-Zhuye/pg1-1_zhuye.html
@@ -28,13 +28,14 @@
 </style>
 
 <body>
-	<p id="classtabletitle">1</p>
-	<div id="classtable"></div>
-	<p>作业表</p>
-	<div id="homeworktable"></div>
+	<div class="container">
+		<p id="classtabletitle" style="font-size: 2em;font-weight: bolder;">1</p>
+		<div id="classtable"></div>
+		<p style="font-size: 2em;font-weight: bolder;">作业表</p>
+		<div id="homeworktable"></div>
+	</div>
+
 </body>
-
-
 <style>
 
 
@@ -64,7 +65,7 @@
 		height: 2em;
 	}
 
-	.headCourse {
+	.headCourse,.th_course {
 		background-color: rgb(193, 235, 248);
 	}
 
@@ -104,7 +105,7 @@
 	.td_xuhao,
 	.td_xiangmu,
 	.td_time,
-	.td_doti {
+	.td_doit {
 		text-align: center;
 		border-collapse: collapse;
 		border-style: solid;
@@ -126,9 +127,14 @@
 		width: 8em;
 	}
 
-	.td_doti {
+	.td_doit {
 		width: 6em;
 	}
 </style>
+<script>
 
+		
+
+
+</script>
 </html>
