--- a/src/PG1-Zhuye/pg1-3_life.html
+++ b/src/PG1-Zhuye/pg1-3_life.html
@@ -19,31 +19,27 @@
 </style>
 
 <body>
-	<div id="weather">
-		<iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tt&skin=pitaya" frameborder="0" width="590"
-			height="98" allowtransparency="true"></iframe>
+	<div class="container">
+		<p style="font-size: 2em;font-weight: bolder;">天气预报</p>
+		<div id="weather">
+			<iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tt&skin=pitaya" frameborder="0" width="590"
+				height="98" allowtransparency="true"></iframe>
+		</div>
+		<p id="tablecaption" style="font-size: 2em;font-weight: bolder;"></p>
+		<div id="moneyouttable">
+	
+		</div>
 	</div>
-	<div id="moneyouttable">
 
-	</div>
 </body>
 <script>
-	var moneyjsonsrc = "../../database/money.json";
-	var moneyjson;
-	function readclassjsonfile() {
-		var moneyrequest = new XMLHttpRequest();
-		moneyrequest.open("get", moneyjsonsrc);
-		moneyrequest.send(null);
-		moneyrequest.onload = function () {
-			if (moneyrequest.status == 200) {
-				moneyjson = JSON.parse(moneyrequest.responseText);
-				fillmoneytable(moneyjson.moneylist);
-			}
-		}
-	}
 	window.onload = function () {
 		drawmoneyouttable("moneyouttable");
 		readclassjsonfile();
+		$("#moneyouttable .td_doti").eq(1).html("<a href=\"http://www.baidu.com/\" target=\"_blank\">百度</a>");
+		$("#moneyouttable .beiwanglutextunit").html("1、你又没有女朋友<br>2、下个月这张卡去注销\n");
+		//$('#centerpagearea', parent.document).css("height",$("body").css("height")); 
+	
 
 	}
 
@@ -51,50 +47,83 @@
 	var unit_beiwanglutext_classname = "beiwanglutextunit";	//定义首行备忘录单元格
 	function drawmoneyouttable(targetstr3) {
 		var table_classname = "homeworktable";			//定义<table>的classname
-		var unit_caption_classname = "th_homework";		//定义首行表头的classname
+		var unit_caption_classname = "th_money";		//定义首行表头的classname
 		var unit_xuhao = "td_xuhao";					//定义第一列序号的classname
 		var unit_xiangmu = "td_xiangmu"					//定义第二列项目的classname
-		var unit_situation = "td_situation"					//定义第三列时间的classname
-		var unit_doit = "td_doti"						//定义第四列doit的classname
-		var hw_num = 5;									//定义有多少行作业
+		var unit_money = "td_money";
+		var unit_situation = "td_situation"					//定义第4列状态的classname
+		var unit_doit = "td_doti"						//定义第5列doit的classname
+		var moneyitem_num = sessionStorage.getItem("ls_moneyjsonL");	//定义有多少行+1
 		//更改名称也要改变CSS中的
-
+		moneyitem_num++;
 		var div_ = $("#" + targetstr3);
 		div_.append("<table class=\"" + table_classname + "\"></table>");//添加表格
 		var table_ = $("." + table_classname);
 		var tr_;
 
 
-		for (var i = 0; i <= hw_num; i++) {
+		for (var i = 0; i <= moneyitem_num; i++) {
 			if (i == 0) {
 				//添加周信息
-				table_.append('<tr class="' + unit_caption_classname + '"><th class="' + unit_caption_classname + " " + unit_xuhao + '">序号</th><th class="' + unit_caption_classname + " " + unit_xiangmu + '">项目</th><th class="' + unit_caption_classname + " " + unit_situation + '">状态</th><th class="' + unit_caption_classname + " " + unit_doit + '">Do it</th><th class="' + unit_beiwanglu_classname + '">备忘录</th></tr >');
+				table_.append('<tr class="' + unit_caption_classname + '"><th class="' + unit_caption_classname + " " + unit_xuhao + '">序号</th><th class="' + unit_caption_classname + " " + unit_xiangmu + '">项目</th><th class="' + unit_caption_classname + " " + unit_money + '">价格</th><th class="' + unit_caption_classname + " " + unit_situation + '">状态</th><th class="' + unit_caption_classname + " " + unit_doit + '">Do it</th><th class="' + unit_beiwanglu_classname + '">备忘录</th></tr >');
 			}
 			else {
 				table_.append('<tr class="num' + i + '"></tr>');	//添加行元素
 				tr_ = $(".num" + i);
-				tr_.append("<td class=\"" + unit_xuhao + "\"> " + i + " </td>");		//添加首列序号
-				tr_.append("<td class=\"" + unit_xiangmu + "\"> </td>");		//添加首列序号
-				tr_.append("<td class=\"" + unit_situation + "\">  </td>");		//添加首列序号
-				tr_.append("<td class=\"" + unit_doit + "\"> </td>");		//添加首列序号
+				tr_.append("<td class=\"" + unit_xuhao + "\"> " + i + " </td>");
+				tr_.append("<td class=\"" + unit_xiangmu + "\"> </td>");
+				tr_.append("<td class=\"" + unit_money + "\"> </td>");
+				tr_.append("<td class=\"" + unit_situation + "\">  </td>");
+				tr_.append("<td class=\"" + unit_doit + "\"> </td>");
 				if (i == 1) {
-					tr_.append("<td class=\"" + unit_beiwanglutext_classname + "\" rowspan=\"" + hw_num + "\" contentEditable=\"true\"></td>");
-
+					tr_.append("<td class=\"" + unit_beiwanglutext_classname + "\" rowspan=\"" + moneyitem_num + "\" contentEditable=\"true\"></td>");
 				}
 			}
 		}
 	}
 
-
-
-	function fillmoneytable(moneyjson) {
-		for (var i = 0; i <= moneyjson.length; i++) {
-			$("#moneyouttable .td_xiangmu").eq(++i).html(moneyjson[--i].item);
-			$("#moneyouttable .td_situation").eq(++i).html(moneyjson[--i].situation);
+	var moneyjsonsrc = "../../database/money.json";
+	function readclassjsonfile() {
+		var moneyrequest = new XMLHttpRequest();
+		moneyrequest.open("get", moneyjsonsrc);
+		moneyrequest.send(null);
+		moneyrequest.onload = function () {
+			if (moneyrequest.status == 200) {
+				var moneyjson = JSON.parse(moneyrequest.responseText);
+				var moneyjsonL = moneyjson.moneylist.length;
+				sessionStorage.setItem("ls_moneyjsonL", moneyjsonL);
+				fillmoneytable(moneyjson["moneylist"]);
+			}
 		}
-		$$("#moneyouttable .td_doti").eq(1).html("<a href=\"www.baidu.com\">交</a>");
-		///////////////////////////////////////
 
+	}
+
+	function fillmoneytable(moneyjson1) {
+
+		$("#tablecaption").html("你工人爷爷来了");
+		var summoney = 0;
+		var checkifcomplete = 0;
+		var tempsituation;
+		for (var i = 0, j = 1; i < moneyjson1.length; i++, j++) {
+			$("#moneyouttable .td_xiangmu").eq(j).html(moneyjson1[i].item);
+			tempsituation = moneyjson1[i].situation;
+			$("#moneyouttable .td_situation").eq(j).html(tempsituation);
+			if (tempsituation == "未完成");
+			{
+				checkifcomplete++;
+			}
+			$("#moneyouttable .td_money").eq(j).html(moneyjson1[i].price);
+			summoney += moneyjson1[i].price;
+		}
+		///////////////////////////////////////
+		$("#moneyouttable .td_xuhao:last").html("总结");
+		$("#moneyouttable .td_money:last").html(summoney);
+		if(checkifcomplete>=0){
+			$("#moneyouttable .td_situation:last").html("未完成").css("color","red");
+		}
+		else{
+			$("#moneyouttable .td_situation:last").html("已完成").css("color","gold");
+		}
 	}
 
 </script>
@@ -107,11 +136,12 @@
 		border-collapse: collapse;
 	}
 
-	.th_homework,
+	.th_money,
 	.td_xuhao,
 	.td_xiangmu,
 	.td_situation,
 	.td_doti,
+	.td_money,
 	.beiwangluunit,
 	.beiwanglutextunit {
 		text-align: center;
@@ -122,7 +152,16 @@
 		padding: 10px 8px;
 	}
 
-	.th_homework,
+	.td_xiangmu {
+		text-align: left;
+	}
+
+	.th_money .td_xiangmu {
+		text-align: center;
+	}
+
+
+	.th_money,
 	.td_xuhao {
 		background-color: rgb(193, 235, 248);
 	}
@@ -132,13 +171,16 @@
 	}
 
 	.td_situation {
-		width: 8em;
-	}
-
-	.td_doti {
 		width: 6em;
 	}
 
+	.td_doti {
+		width: 4em;
+	}
+
+	.td_money {
+		width: 6em;
+	}
 
 	.beiwanglutextunit {
 		text-align: left;
