--- a/src/PG1-Zhuye/pg1-2_lunch.html
+++ b/src/PG1-Zhuye/pg1-2_lunch.html
@@ -8,16 +8,18 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
 		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 		crossorigin="anonymous"></script>
+	<script src="../iframesetting.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<title>Document</title>
 </head>
 <style>
-	#box{
-		display: inline-block;
+	body {
+		--tablewidth: 726px;
 	}
+
 	#AccountTable {
-		width: 801px;
+		margin: 0 auto;
 
 	}
 
@@ -30,7 +32,7 @@
 
 	#pictures {
 		position: relative;
-		width: 801px;
+		width: var(--tablewidth);
 	}
 
 	#pictures table .imginstru td {
@@ -39,18 +41,15 @@
 		font-weight: bold;
 	}
 
-
-
 	img {
+		width: 200px;
 		border: red 1px dotted;
 		margin: 0px 20px;
 	}
 </style>
 
 <body>
-	<div id="box">
-
-
+	<div id="box" class="container">
 		<table id="AccountTable">
 			<tr>
 				<td>
@@ -114,18 +113,22 @@
 <script>
 	var animatetime = 300;
 	var animatecounter = 0;
+	var wid = $("#pictures").css("width");
 	function changetologin() {
 		if (animatecounter) {
-			$("#pictures").animate({ left: '+=801px' }, animatetime);
+			$("#pictures").animate({ left: '+=' + wid }, animatetime);
 			animatecounter++;
 		}
 	}
 
 	function changetoregister() {
 		if (!animatecounter) {
-			$("#pictures").animate({ left: '-=801px' }, animatetime);
+			$("#pictures").animate({ left: '-=' + wid }, animatetime);
 			animatecounter--;
 		}
+	}
+	window.onload=function(){
+		//$('#centerpagearea', parent.document).css("height",$("body").css("height")); 
 	}
 </script>
 
