--- a/src/PG2-Study/pg2_main.html
+++ b/src/PG2-Study/pg2_main.html
@@ -85,22 +85,23 @@
 		<div id="horzionalnav">
 			<ul>
 				<li>
-					<div class="Guide_front Liactive">主页</div>
+					<div class="Guide_front Liactive">学习</div>
 					<div class="Guide_back">读书人上人</div>
 				</li>
 				<li>
-					<div class="Guide_front">恰饭</div>
-					<div class="Guide_back">恰饭人恰饭魂</div>
+					<div class="Guide_front">收藏</div>
+					<div class="Guide_back">收藏+1</div>
 				</li>
 				<li>
-					<div class="Guide_front">生活</div>
-					<div class="Guide_back">今日不宜</div>
+					<div class="Guide_front">工具</div>
+					<div class="Guide_back">事半功倍</div>
 				</li>
+
 			</ul>
 		</div>
 		<div id="pg1_main_iframebox">
-			<iframe id="pg1iframe" class="embed-responsive-item iframepage" scrolling="no"
-				src="./pg1-1_zhuye.html"></iframe>
+			<iframe id="pg2iframe" class="embed-responsive-item iframepage" scrolling="no"
+				src="./pg2-1_study.html"></iframe>
 		</div>
 	</div>
 
@@ -127,18 +128,18 @@
 <script>
 	$("#horzionalnav li").eq(0).click(function () {
 		switchfn("#horzionalnav li .Guide_front", 0, "Liactive");
-		$("#pg1_main_iframebox iframe").attr("src", "./pg1-1_zhuye.html")
+		$("#pg1_main_iframebox iframe").attr("src", "./pg2-1_study.html")
 		GBFheight(0, "pg1_main");
 
 	})
 	$("#horzionalnav li").eq(1).click(function () {
 		switchfn("#horzionalnav li .Guide_front", 1, "Liactive");
-		$("#pg1_main_iframebox iframe").attr("src", "./pg1-2_lunch.html")
+		//$("#pg1_main_iframebox iframe").attr("src", "./pg2-2_lunch.html")
 		GBFheight(0, "pg1_main");
 	})
 	$("#horzionalnav li").eq(2).click(function () {
 		switchfn("#horzionalnav li .Guide_front", 2, "Liactive");
-		$("#pg1_main_iframebox iframe").attr("src", "./pg1-3_life.html")
+		//$("#pg1_main_iframebox iframe").attr("src", "./pg2-3_life.html")
 		GBFheight(0, "pg1_main");
 	})
 
