--- a/src/PG2-Study/pg2_main.html
+++ b/src/PG2-Study/pg2_main.html
@@ -101,7 +101,7 @@
 		</div>
 		<div id="pg1_main_iframebox">
 			<iframe id="pg2iframe" class="embed-responsive-item iframepage" scrolling="no"
-				src="./pg2-1_study.html"></iframe>
+				src="./pg2-2_collection.html"></iframe>
 		</div>
 	</div>
 
