--- a/src/PG2-Study/pg2-2_collection.html
+++ b/src/PG2-Study/pg2-2_collection.html
@@ -8,31 +8,18 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
 		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 		crossorigin="anonymous"></script>
-	<script src="../iframesetting.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<title>Document</title>
-	<script src="./src/pg1-1_zhuye.js"></script>
-</head>
-<style>
-	body {
-		margin: 0px;
-		padding: 0px;
-	}
+	<script src="../iframesetting.js"></script>
+	<script src="./src/pg2-2_collection.js"></script>
 
-	p {
-		line-height: 2em;
-		margin: 0px;
-	}
-</style>
+</head>
 
 <body>
 	<div class="container">
-		<p id="classtabletitle" style="font-size: 2em;font-weight: bolder;">1</p>
-		<div id="classtable"></div>
-		<p style="font-size: 2em;font-weight: bolder;">作业表</p>
-		<div id="homeworktable"></div>
+		<div id="collectiontablediv"></div>
 	</div>
-
 </body>
+
 </html>
