--- a/src/account/account.html
+++ b/src/account/account.html
@@ -14,9 +14,10 @@
 	<title>AccountPage</title>
 </head>
 <style>
-	body{
+	body {
 		min-width: 1000px;
 	}
+
 	#topbg {
 		position: fixed;
 		top: 0px;
@@ -65,7 +66,7 @@
 
 <body>
 	<header id="topbg"></header>
-	<div >
+	<div>
 		<table id="AccountTable">
 			<tr>
 				<td id="login" onclick="changetologin()">登录</td>
@@ -80,7 +81,7 @@
 							<input type="text" class="form-control" id="lg_input_text" placeholder="请输入学号或姓名">
 							<br><br>
 							<label for="lg_input_psw" class="col-sm-4 control-label">密码：</label>
-							<input type="text" class="form-control" id="lg_input_psw" placeholder="请输入密码">
+							<input type="password" class="form-control" id="lg_input_psw" placeholder="请输入密码">
 							<br><br><br><br>
 							<button id="denglu" class="btn btn-info col-sm-4 col-sm-offset-4" type="button"
 								onclick="logincheck()">登录</button>
@@ -126,7 +127,10 @@
 			</tr>
 		</table>
 	</div>
-	<footer id="bottombg"></footer>
+	<footer id="bottombg">
+		<div style="position:fixed;bottom: 1em; width: 100%;height: 1em;background: rgba(0,0,0,1),no-repeat;"><a target="_blank" href="https://a-chrysand.github.io/ResponsiveHTML/src/account/account.html">预览网页</a><span>&nbsp;&nbsp;&nbsp;</span><a target="_blank" href="https://github.com/A-Chrysand/ResponsiveHTML">源代码</a></div>
+	</footer>
+
 </body>
 <script>
 	var animatetime = 300;
@@ -172,8 +176,6 @@
 		line-height: 1em;
 		text-align: center;
 	}
-
-
 </style>
 
 
