--- a/src/host.html
+++ b/src/host.html
@@ -10,8 +10,9 @@
 		crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+	
 	<link rel="stylesheet" href="./host.css" />
+	<script src="./iframesetting.js"></script>
 	<title>Document</title>
 </head>
 <style>
@@ -36,15 +37,15 @@
 			</button>
 			<div style="height: 50px;">
 				<img id="titlepic" src="../image/icon/titlepic.png">
-				<img id="titlecharpic" src="../image/bg/grass_side2.png">
-				<span class="titlechar">123456</span>
+				<img id="titlecharpic" src="../image/icon/titlecharpic.png">
+				<span class="titlechar">网站介绍</span>
 			</div>
 		</div>
 		<!--响应式桌面端部分-->
 		<div class="collapse navbar-collapse" id="horzionalmenu">
-			<ul class="nav navbar-nav">
-				<li class="active"><a>主页</a></li>
-				<li><a>学习</a></li>
+			<ul class="nav navbar-nav" id="navul">
+				<li class="active" style="cursor: pointer;"><a>主页</a></li>
+				<li style="cursor: pointer;"><a>学习</a></li>
 				<li><a>聊天</a></li>
 				<li><a>新闻</a></li>
 			</ul>
@@ -94,6 +95,14 @@
 				<span class="visible-lg">✔ 在大型设备上可见</span>
 			</div>
 		</div>
+	</div>
+	<footer id="host_footer">
+		<img style="margin-top: -209px; margin-left: 87%;" src="../image/img/decoration/tree1.png">
+		<img style="margin-top: -208px; margin-left: 1%;" src="../image/img/decoration/tree2.png">
+		<div style="bottom: 1em; width: 100%;height: 1em;"><a style="color: red;" target="_blank"
+				href="https://a-chrysand.github.io/ResponsiveHTML/src/account/account.html">预览网页</a><span>&nbsp;&nbsp;&nbsp;</span><a
+				style="color: red;" target="_blank" href="https://github.com/A-Chrysand/ResponsiveHTML">源代码</a></div>
+	</footer>
 </body>
 <style>
 	.RightUserItem {
@@ -143,22 +152,16 @@
 
 	.iframepage {
 		border: red 2px dotted;
-
 		width: 100%;
 	}
 
+	#host_footer {
+		width: 100%;
+		height: 50px;
+		z-index: -1;
+		background: url("../image/bg/grass_side.png")bottom repeat-x;
 
-
-
-
-
-
-
-
-
-
-
-
+	}
 
 	.row {
 		width: 100%;
@@ -171,12 +174,30 @@
 	var currentuser = JSON.parse(sessionStorage.getItem("file_currentuser"));
 	$(".RightUserItem #Username").html("Hi," + currentuser.name);
 
-	$(".naviconpic").eq(0).click(function () {
+	$(".naviconpic" ).eq(0).click(function () {
 		$("#pg1_main").attr("src", "./PG1-Zhuye/pg1_main.html");
+		switchfn("#navul li", 0, "active");
 	})
+	$("#navul li" ).eq(0).click(function () {
+		$("#pg1_main").attr("src", "./PG1-Zhuye/pg1_main.html");
+		switchfn("#navul li", 0, "active");
+	})
+
 	$(".naviconpic").eq(1).click(function () {
 		$("#pg1_main").attr("src", "./PG2-Study/pg2_main.html");
+		switchfn("#navul li", 1, "active");
+		GBFheight(0, "pg1_main");
 	})
+	$("#navul li" ).eq(1).click(function () {
+		$("#pg1_main").attr("src", "./PG2-Study/pg2_main.html");
+		switchfn("#navul li", 1, "active");
+		GBFheight(0, "pg1_main");
+	})
+
+	function switchfn(target, num, classname) {
+		$(target + ":not(:eq(" + num + "))").removeClass(classname);
+		$(target + ":eq(" + num + ")").addClass(classname);
+	}
 </script>
 
 </html>
