--- a/src/host.html
+++ b/src/host.html
@@ -34,6 +34,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
 			</button>
 			<div style="height: 50px;">
 				<img id="titlepic" src="../image/icon/titlepic.png">
@@ -48,6 +49,7 @@
 				<li style="cursor: pointer;"><a>学习</a></li>
 				<li><a>聊天</a></li>
 				<li><a>新闻</a></li>
+				<li><a>美景</a></li>
 			</ul>
 			<div id="RightUser">
 				<div class="RightUserItem">
@@ -71,29 +73,30 @@
 				<li><img class="naviconpic" src="../image/icon/2study_pencil.png"></li>
 				<li><img class="naviconpic" src="../image/icon/3chat_bubble.png"></li>
 				<li><img class="naviconpic" src="../image/icon/4news_tv.png"></li>
+				<li><img class="naviconpic" src="../image/icon/usericon.jpg"></li>
 			</ul>
 		</div>
 		<div id="centerpagearea">
 			<iframe class="embed-responsive-item iframepage" id="pg1_main" src="./PG1-Zhuye/pg1_main.html"></iframe>
 		</div>
-		<div class="row">
-			<div class="col-xs-6 col-sm-3" style="background-color: #ccc;">
-				<span class="hidden-xs">特别小型</span>
-				<span class="visible-xs">✔ 在特别小型设备上可见</span>
-			</div>
-			<div class="col-xs-6 col-sm-3" style="background-color: #ccc;">
-				<span class="hidden-sm">小型</span>
-				<span class="visible-sm">✔ 在小型设备上可见</span>
-			</div>
-			<div class="clearfix visible-xs"></div>
-			<div class="col-xs-6 col-sm-3" style="background-color: #ccc;">
-				<span class="hidden-md">中型</span>
-				<span class="visible-md">✔ 在中型设备上可见</span>
-			</div>
-			<div class="col-xs-6 col-sm-3" style="background-color: #ccc;">
-				<span class="hidden-lg">大型</span>
-				<span class="visible-lg">✔ 在大型设备上可见</span>
-			</div>
+	</div>
+	<div class="row" style="margin: 0px;padding: 0px;">
+		<div class="col-xs-6 col-sm-3" style="background-color: #ccc;">
+			<span class="hidden-xs">特别小型</span>
+			<span class="visible-xs">✔ 在特别小型设备上可见</span>
+		</div>
+		<div class="col-xs-6 col-sm-3" style="background-color: #ccc;">
+			<span class="hidden-sm">小型</span>
+			<span class="visible-sm">✔ 在小型设备上可见</span>
+		</div>
+		<div class="clearfix visible-xs"></div>
+		<div class="col-xs-6 col-sm-3" style="background-color: #ccc;">
+			<span class="hidden-md">中型</span>
+			<span class="visible-md">✔ 在中型设备上可见</span>
+		</div>
+		<div class="col-xs-6 col-sm-3" style="background-color: #ccc;">
+			<span class="hidden-lg">大型</span>
+			<span class="visible-lg">✔ 在大型设备上可见</span>
 		</div>
 	</div>
 	<footer id="host_footer">
