--- a/src/PG2-Study/pg2-1_collection.html
+++ b/src/PG2-Study/pg2-1_collection.html
@@ -12,12 +12,13 @@
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<title>Document</title>
 	<script src="../iframesetting.js"></script>
-	<script src="./src/pg2-2_collection.js"></script>
+	<script src="./src/pg2-1_collection.js"></script>
 
 </head>
 
 <body>
 	<div class="container">
+		<p style="font-size: 2em;font-weight: bolder;text-align: center;">收藏夹</p>
 		<div id="collectiontablediv"></div>
 	</div>
 </body>
