--- a/src/PG2-Study/pg2_main.html
+++ b/src/PG2-Study/pg2_main.html
@@ -85,23 +85,23 @@
 		<div id="horzionalnav">
 			<ul>
 				<li>
-					<div class="Guide_front Liactive">学习</div>
-					<div class="Guide_back">读书人上人</div>
-				</li>
-				<li>
-					<div class="Guide_front">收藏</div>
-					<div class="Guide_back">收藏+1</div>
+					<div class="Guide_front Liactive">学习网站</div>
+					<div class="Guide_back">网上自有黄金屋</div>
 				</li>
 				<li>
 					<div class="Guide_front">工具</div>
-					<div class="Guide_back">事半功倍</div>
+					<div class="Guide_back">欲善其事先利其器</div>
+				</li>
+				<li>
+					<div class="Guide_front">好书推荐</div>
+					<div class="Guide_back">书中自有钻石屋</div>
 				</li>
 
 			</ul>
 		</div>
 		<div id="pg1_main_iframebox">
 			<iframe id="pg2iframe" class="embed-responsive-item iframepage" scrolling="no"
-				src="./pg2-2_collection.html"></iframe>
+				src="./pg2-1_collection.html"></iframe>
 		</div>
 	</div>
 
@@ -127,16 +127,18 @@
 	
 	$("#horzionalnav li").eq(0).click(function () {
 		switchfn("#horzionalnav li .Guide_front", 0, "Liactive");
-		$("#pg1_main_iframebox iframe").attr("src", "./pg2-2_collection.html")
+		$("#pg1_main_iframebox iframe").attr("src", "./pg2-1_collection.html");
 		GBFheight(0, "pg1_main");
 
 	})
 	$("#horzionalnav li").eq(1).click(function () {
 		switchfn("#horzionalnav li .Guide_front", 1, "Liactive");
+		$("#pg1_main_iframebox iframe").attr("src", "./pg2-2_tool.html");
 		GBFheight(0, "pg1_main");
 	})
 	$("#horzionalnav li").eq(2).click(function () {
 		switchfn("#horzionalnav li .Guide_front", 2, "Liactive");
+		$("#pg1_main_iframebox iframe").attr("src", "./pg2-3_goodbooks.html");
 		GBFheight(0, "pg1_main");
 	})
 
