--- a/src/PG1-Zhuye/pg1-1_zhuye.html
+++ b/src/PG1-Zhuye/pg1-1_zhuye.html
@@ -28,10 +28,19 @@
 
 <body>
 	<div class="container">
-		<p id="classtabletitle" style="font-size: 2em;font-weight: bolder;">1</p>
+		<h1 id="classtabletitle" style="font-weight: bolder;">1</h1>
+		<p class="mingyan" >书山有路勤为径，学海无涯苦作舟——唐·韩愈</p>
 		<div id="classtable"></div>
-		<p style="font-size: 2em;font-weight: bolder;">作业表</p>
+		<h1 style="font-weight: bolder;">作业表</h1>
+		<p  class="mingyan">构成天才的决定因素就应是勤奋——现代·郭沫若</p>
 		<div id="homeworktable"></div>
 	</div>
 </body>
+<style>
+	.mingyan{
+		font-size: 1.5em;
+		font-family: "楷体";
+		color: red;
+	}
+</style>
 </html>
