--- a/src/PG2-Study/pg2-2_tool.html
+++ b/src/PG2-Study/pg2-2_tool.html
@@ -12,62 +12,89 @@
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<title>Document</title>
 </head>
+<style>
+	.container {
+		border: springgreen 2px solid;
+
+	}
+
+	#verticalmenu_ul li {
+		--height: 60px;
+		width: calc(2.5 * var(--height));
+		height: var(--height);
+
+		text-align: center;
+		line-height: var(--height);
+		border: steelblue 1px solid;
+		background-color: rgba(74, 157, 253, 0.5);
+		cursor: pointer;
+	}
+
+	#verticalmenu_ul li:hover {
+		background-color: coral;
+	}
+
+	#verticalmenu_ul li div {
+		margin: 1em auto;
+		text-align: center;
+	}
+</style>
 
 <body>
 	<div class="container">
 		<div>
-			<table>
-				<tr>
-					<th>
-						<p style="font-size: 2em;font-weight: bolder;text-align: center;">工具箱</p>
-						<p>介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍</p>
-					</th>
-				</tr>
-				<tr>
-					<td>
-						<div class="iframeboxs">
-							<iframe width="100%" height="700px"
-								src="../../database/warpper/TrueTableGenerator/TTGenerator.html"></iframe>
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<div class="iframeboxs">
-							<iframe width="670px" height="2000px" scrolling="no"
-								style="margin-top: -410px;margin-left:-16px;"
-								src="https://www.99cankao.com/matrix/matrix-inverse.php"></iframe>
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<div class="iframeboxs">
-							<iframe width="670px" height="2000px" scrolling="no"
-								style="margin-top: -410px;margin-left:-16px;"
-								src="https://www.99cankao.com/matrix/rank-of-matrix.php"></iframe>
-						</div>
-					</td>
-				</tr>
-
-			</table>
-
+			<p style="font-size: 2em;font-weight: bolder;text-align: center;">工具箱</p>
+			<p>介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍</p>
 		</div>
+		<div style="display: flex;width: 100%;">
+			<div id="verticalmenu">
+				<ul class="nav" id="verticalmenu_ul">
+					<li class="active">真值表生成器 </li>
+					<li> 3x3矩阵计算器 </li>
+					<li> 3x3矩阵秩计算器 </li>
+					<li> 计算器大全 </li>
+				</ul>
+			</div>
+			<div id="toolbox">
+				<div id="toolboxswitch">
+					<div class="iframeboxs">
+						<iframe width="700px" height="700px"
+							src="../../database/warpper/TrueTableGenerator/TTGenerator.html"></iframe>
+					</div>
+					<div class="iframeboxs">
+						<iframe width="670px" height="2000px" scrolling="no"
+							style="margin-top: -410px;margin-left:-16px;"
+							src="https://www.99cankao.com/matrix/matrix-inverse.php"></iframe>
+					</div>
+					<div class="iframeboxs">
+						<iframe width="670px" height="2000px" scrolling="no"
+							style="margin-top: -410px;margin-left:-16px;"
+							src="https://www.99cankao.com/matrix/rank-of-matrix.php"></iframe>
+					</div>
+				</div>
+			</div>
+		</div>
+
 
 	</div>
 </body>
 <style>
+	#toolboxswitch {
+		overflow: hidden;
+		height: 700px;
+	}
+
 	.iframeboxs {
 		overflow: hidden;
 		height: 700px;
-
+		width: calc(100% - 150px);
 	}
 
 	td {
 		border: brown 2px solid;
 	}
 
-	iframe{
+	iframe {
 		border: none;
 	}
 </style>
