--- a/src/account/account.html
+++ b/src/account/account.html
@@ -8,10 +8,11 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
 		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 		crossorigin="anonymous"></script>
-	<script src="./account.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<title>AccountPage</title>
+
+	<script src="./account.js"></script>
 </head>
 <style>
 	body {
@@ -121,14 +122,16 @@
 								onclick="register()">立即注册</button>
 						</div>
 					</form>
-
 					<!--------------------------->
 				</td>
 			</tr>
 		</table>
 	</div>
 	<footer id="bottombg">
-		<div style="position:fixed;bottom: 1em; width: 100%;height: 1em;background: rgba(0,0,0,1),no-repeat;"><a target="_blank" href="https://a-chrysand.github.io/ResponsiveHTML/src/account/account.html">预览网页</a><span>&nbsp;&nbsp;&nbsp;</span><a target="_blank" href="https://github.com/A-Chrysand/ResponsiveHTML">源代码</a></div>
+		<div style="position:fixed;bottom: 1em; width: 100%;height: 1em;background: rgba(0,0,0,1),no-repeat;"><a
+				target="_blank"
+				href="https://a-chrysand.github.io/ResponsiveHTML/src/account/account.html">预览网页</a><span>&nbsp;&nbsp;&nbsp;</span><a
+				target="_blank" href="https://github.com/A-Chrysand/ResponsiveHTML">源代码</a></div>
 	</footer>
 
 </body>
@@ -177,6 +180,5 @@
 		text-align: center;
 	}
 </style>
-
 
 </html>
