--- a/database/warpper/TrueTableGenerator/src/introduction.html
+++ b/database/warpper/TrueTableGenerator/src/introduction.html
@@ -18,20 +18,20 @@
 		}
 
 		.example_table1 {
-			width: 40%;
+			width: 400px;
 			text-align: left;
 			border: 2px solid;
 			border-collapse: collapse;
 		}
 
 		.example_tableunit1 {
-			width: 50%;
+			width: 300px;
 			border: 1px solid;
 		}
 
 		.example_table2 {
 			width: 40%;
-			text-align:center;
+			text-align: center;
 			border: 2px solid black;
 			border-collapse: collapse;
 			text-align: center;
