--- a/src/PG2-Study/pg2-2_tool.html
+++ b/src/PG2-Study/pg2-2_tool.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<title>Document</title>
+
 </head>
 <style>
 	.container {
@@ -41,7 +42,7 @@
 </style>
 
 <body>
-	<div class="container">
+	<div class="container-fluid">
 		<div>
 			<p style="font-size: 2em;font-weight: bolder;text-align: center;">工具箱</p>
 			<p>介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍</p>
@@ -58,18 +59,76 @@
 			<div id="toolbox">
 				<div id="toolboxswitch">
 					<div class="iframeboxs">
-						<iframe width="700px" height="700px"
-							src="../../database/warpper/TrueTableGenerator/TTGenerator.html"></iframe>
+						<iframe height="100%" src="../../database/warpper/TrueTableGenerator/TTGenerator.html"
+							frameborder="0"></iframe>
 					</div>
 					<div class="iframeboxs">
-						<iframe width="670px" height="2000px" scrolling="no"
-							style="margin-top: -410px;margin-left:-16px;"
-							src="https://www.99cankao.com/matrix/matrix-inverse.php"></iframe>
+						<div style="width: 680px;overflow: hidden;">
+							<iframe style="margin-top: -410px;" height="955px"
+								src="https://www.99cankao.com/matrix/matrix-inverse.php" scrolling="no"
+								frameborder="0"></iframe>
+						</div>
 					</div>
 					<div class="iframeboxs">
-						<iframe width="670px" height="2000px" scrolling="no"
-							style="margin-top: -410px;margin-left:-16px;"
-							src="https://www.99cankao.com/matrix/rank-of-matrix.php"></iframe>
+						<div style="width: 680px;overflow: hidden;">
+							<iframe style="margin-top: -410px;" height="745px"
+								src="https://www.99cankao.com/matrix/rank-of-matrix.php" scrolling="no"
+								frameborder="0"></iframe>
+						</div>
+					</div>
+					<div class="iframeboxs">
+						<div>
+							<table id="weblisttable">
+								<tr>
+									<td class="webtitle">
+										99参考计算网
+									</td>
+									<td class="gonow">
+										<a target="_blank" href="https://www.99cankao.com/">立即行动↗</a>
+									</td>
+								</tr>
+								<tr>
+									<td colspan="2">
+										<p style="font-size: 1.25em;">适用范围</p>
+										<p class="discription">矩阵：2/3阶行列式、伴随矩阵、矩阵的加减乘法计算</p>
+										<p class="discription">数字：整数、分数、百分数、带分数计算</p>
+										<p class="discription">平面几何：双曲线、抛物线、球冠、三角形、四边形计算</p>
+										<p class="discription">立体几何：球、圆柱体、立方体、棱锥面积、体积、棱长计算</p>
+										<p class="discription">解析几何：三维空间直线方程、重心、中垂线计算</p>
+										<p class="discription">其他计算：日期、进制、物理、电子电路、颜色</p>
+									</td>
+								</tr>
+								<tr>
+									<td class="webtitle">
+										EdrawMath公式编辑器
+									</td>
+									<td class="gonow">
+										<a target="_blank" href="https://math.edrawsoft.cn/">立即行动↗</a>
+									</td>
+								</tr>
+								<tr>
+									<td colspan="2">
+										<p style="font-size: 1.25em;">适用范围</p>
+										<p class="discription">网页版编辑数学公式，可以将编辑好的公式用在学习通提交作业</p>
+									</td>
+								</tr>
+								<tr>
+									<td class="webtitle">
+										函数图像绘制
+									</td>
+									<td class="gonow">
+										<a target="_blank"
+											href="https://zh.numberempire.com/graphingcalculator.php?">立即行动↗</a>
+									</td>
+								</tr>
+								<tr>
+									<td colspan="2">
+										<p style="font-size: 1.25em;">适用范围</p>
+										<p class="discription">在线绘制函数图像，面对复杂的平面函数，可以绘出其图像再仔细分析</p>
+									</td>
+								</tr>
+							</table>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -78,26 +137,104 @@
 
 	</div>
 </body>
+
 <style>
-	#toolboxswitch {
+	#toolbox {
+
 		overflow: hidden;
-		height: 700px;
+		height: 701px;
+		flex: 1;
+	}
+
+	#toolboxswitch {
+		position: relative;
+		margin: 0 auto 0 10px;
+		height: 2700px;
 	}
 
 	.iframeboxs {
+
 		overflow: hidden;
 		height: 700px;
-		width: calc(100% - 150px);
-	}
+		width: 100%;
 
-	td {
-		border: brown 2px solid;
 	}
 
 	iframe {
-		border: none;
+		width: 100%;
+		border: skyblue 2px solid;
+	}
+
+	#weblisttable {
+		width: 600px;
+	}
+
+	#weblisttable td {
+		padding: 10px;
+		border: steelblue 1px solid;
+	}
+
+	#weblisttable .webtitle {
+		font-weight: bold;
+		font-size: 1.25em;
+		height: 2em;
+		width: 300px;
+	}
+
+	#weblisttable .gonow {
+		text-align: center;
+		width: 100px;
 	}
 </style>
+<script>
+	var animatetime = 200;
+	var animatecounter = 0;
+	var currentlayer = 0;
+	$("#verticalmenu_ul li").eq(0).click(function () {
+		movedecision(currentlayer, 0);
+		currentlayer = 0;
+	});
+	$("#verticalmenu_ul li").eq(1).click(function () {
+		movedecision(currentlayer, 1);
+		currentlayer = 1;
+	});
+	$("#verticalmenu_ul li").eq(2).click(function () {
+		movedecision(currentlayer, 2);
+		currentlayer = 2;
+	});
+	$("#verticalmenu_ul li").eq(3).click(function () {
+		movedecision(currentlayer, 3);
+		currentlayer = 3;
+	});
 
+	function movedecision(fromlayer, tolayer) {
+		console.log
+		if (fromlayer > tolayer) {
+			moveup(fromlayer - tolayer);
+		}
+		else if (fromlayer < tolayer) {
+			movedown(tolayer - fromlayer);
+		}
+	}
+	function moveup(count) {
+		for (; count > 0; count--) {
+			$("#toolboxswitch").animate({ top: '+=700px' }, animatetime);
+
+		}
+	}
+	function movedown(count) {
+		for (; count > 0; count--) {
+			$("#toolboxswitch").animate({ top: '-=700px' }, animatetime);
+
+		}
+	}
+</script>
+
+<style>
+	.discription {
+		line-height: 1em;
+		text-indent: 2em;
+	}
+</style>
 
 </html>
