--- a/src/account/account.html
+++ b/src/account/account.html
@@ -101,7 +101,7 @@
 							<input type="password" class="form-control" id="rg_input_ckpsw" placeholder="再次输入密码">
 							<br><br>
 							<label for="rg_input_ckpsw" class="col-sm-4 control-label">班级：</label>
-							<select class="form-control" style="width: 14em;">
+							<select class="form-control" style="width: 14em;" id="ClassSelectBox">
 								<option value="wanggong1901">计科1901</option>
 								<option value="ruangong1901">软件工程1901</option>
 								<option value="jike1901">网络工程1901</option>
