--- a/src/PG2-Study/pg2-3_goodbooks.html
+++ b/src/PG2-Study/pg2-3_goodbooks.html
@@ -11,23 +11,30 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<title>Document</title>
+	<script src="../../database/se_pg2-3_booklist.js"></script>
+	<script src="./src/pg2-3_goodbooks.js"></script>
+
+
 </head>
 
 <body>
 	<div class="container">
 		<p style="font-size: 2em;font-weight: bolder;text-align: center;">好书推荐</p>
+
 		<div id="bookselectordiv" class="form-inline form-horizontal">
 			<label class="control-label col-sm-0">筛选：</label>
-			<select class="form-control" style="width: 14em;">
+			<select class="form-control" style="width: 14em;" id="bookselectlist">
 				<option value="none">无</option>
-				<option value="science">科学</option>
-				<option value="human">人文</option>
-				<option value="nature">自然</option>
-				<option value="tech">技术</option>
+				<option value="科学">科学</option>
+				<option value="人文">人文</option>
+				<option value="自然">自然</option>
+				<option value="技术">技术</option>
 			</select>
-			<button class="btn btn-default">确定</button>
+			<button class="btn btn-default" onclick="bookselect()">确定</button>
+			<span style="float: right;line-height: 2em;" id="countbook"></span>
 		</div>
-		<div id="goodbooktablediv">	</div>
+		<br>
+		<div id="goodbooktablediv"> </div>
 	</div>
 </body>
 
