--- a/src/host.html
+++ b/src/host.html
@@ -18,6 +18,7 @@
 <style>
 	body {
 		background: url("../../image/bg/top.jpg")top no-repeat;
+		overflow-x: hidden;
 	}
 
 	.navbar-default {
@@ -81,7 +82,7 @@
 		</div>
 	</div>
 
-	<footer id="host_footer" class="container">
+	<footer id="host_footer">
 		<img style="margin-top: -209px; margin-left: 87%;" src="../image/img/decoration/tree1.png">
 		<img style="margin-top: -208px; margin-left: 1%;" src="../image/img/decoration/tree2.png">
 		<div style="display: inline;; width: 100%;height: 1em;"><a style="color: red;" target="_blank"
@@ -141,13 +142,11 @@
 	}
 
 	#host_footer {
-
 		float: bottom;
 		width: 100%;
 		height: 50px;
 		z-index: -1;
-		background: url("../image/bg/grass_side.png")bottom repeat-x;
-
+		background: url("../image/bg/grass_side.png") bottom repeat-x;
 	}
 
 	.row {
