--- a/src/host.html
+++ b/src/host.html
@@ -17,7 +17,7 @@
 </head>
 <style>
 	body {
-		background: url("../../image/bg/top.jpg")top no-repeat;
+		background: url("../image/bg/top.jpg")top no-repeat;
 		overflow-x: hidden;
 	}
 
