--- a/src/PG2-Study/pg2-3_goodbooks.html
+++ b/src/PG2-Study/pg2-3_goodbooks.html
@@ -13,6 +13,7 @@
 	<title>Document</title>
 	<script src="../../database/se_pg2-3_booklist.js"></script>
 	<script src="./src/pg2-3_goodbooks.js"></script>
+	<script src="../iframesetting.js"></script>
 
 
 </head>
