--- a/src/PG2-Study/pg2-1_collection.html
+++ b/src/PG2-Study/pg2-1_collection.html
@@ -19,6 +19,7 @@
 <body>
 	<div class="container">
 		<p style="font-size: 2em;font-weight: bolder;text-align: center;">收藏夹</p>
+		<p>介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍</p>
 		<div id="collectiontablediv"></div>
 	</div>
 </body>
