--- a/src/account/account.html
+++ b/src/account/account.html
@@ -118,7 +118,7 @@
 								<input type="radio" id="choose_sex_female" name="choose_sex" value="female"> 女
 							</label>
 							<br><br><br><br>
-							<button id="zhuce" class="btn btn-info col-sm-4 col-sm-offset-4" type="button"
+							<button id="zhuce" class="btn btn-info  col-sm-offset-4" type="button"
 								onclick="register()">立即注册</button>
 						</div>
 					</form>
