--- a/src/host.html
+++ b/src/host.html
@@ -50,7 +50,7 @@
 				<li style="cursor: pointer;"><a>学习</a></li>
 				<li style="cursor: pointer;"><a>聊天</a></li>
 				<li><a>新闻</a></li>
-				<li style="cursor: pointer;"><a>用户中心</a></li>
+				<li style="cursor: pointer;"><a target="_blank" href="./PG5-Usercenter/pg5_main.html">用户中心</a></li>
 			</ul>
 			<div id="RightUser">
 				<div class="RightUserItem">
